# ship-fast-or-die

./: README.md  pyproject.toml
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/ship_fast_or_die/: db_client.py  main.py  repo_tools.py
src/ship_fast_or_die/: db_client.py  main.py  repo_tools.py
webapp/: next.config.ts  package-lock.json  package.json
webapp/src/app/: layout.tsx  page.tsx
webapp/src/app/add-product/: page.tsx
webapp/src/app/components/: Navbar.tsx
webapp/src/app/types/: product.ts  repository.ts  user.ts
webapp/src/app/users/[username]/: page.tsx
webapp/src/app/users/[username]/[product]/: page.tsx
